# franka_human_friendly_controllers

./: CMakeLists.txt  README.md  change_self_collision.py  franka_human_friendly_controllers_plugin.xml  package.xml  setup_gazebo.py
cfg/: compliance_joint_param.cfg  compliance_param.cfg  desired_mass_param.cfg
config/: franka_control_node.yaml  franka_human_friendly_controllers.yaml  latest_config.json
franka_msgs/msg/: _ErrorRecoveryAction.py  _ErrorRecoveryActionResult.py  _FrankaState.py
franka_msgs/srv/: _SetEEFrame.py  _SetKFrame.py  _SetLoad.py  __init__.py
include/franka_human_friendly_controllers/: cartesian_variable_impedance_controller.h  cartesian_variable_impedance_external_model_controller.h  fk_panda.c  joint_variable_impedance_controller.h  model_read.h  pseudo_inversion.h
launch/: cartesian_variable_impedance_controller.launch  franka_control.launch  joint_variable_impedance_controller.launch  model_read.launch
msg/: JointTorqueState.msg
python/: DAVI.py  SoftReferences.py  StateActionInterpreter.py  controller.py  desk.py  gui.py  main.py
python/DAVI/: DAVI.py  GripperController.py  SoftReferences.py  StateActionModel.py
python/LfD/: Learning_from_demonstration.py  Learning_from_demonstration_joint.py  main_lfd.py  panda.py  pose_transform_functions.py  read_buttons.py  teleoperation.py  teleoperation_elbow.py
python/LfD/data/: last.npz
python/LfD/franka_gripper/msg/: _GraspAction.py  _GraspActionFeedback.py  _GraspActionGoal.py  _GraspActionResult.py  _GraspEpsilon.py  _GraspFeedback.py  _GraspGoal.py  _GraspResult.py  _HomingAction.py  _HomingActionFeedback.py  _HomingActionGoal.py  _HomingActionResult.py  _HomingFeedback.py  _HomingGoal.py  _HomingResult.py  _MoveAction.py  _MoveActionFeedback.py  _MoveActionGoal.py  _MoveActionResult.py  _MoveFeedback.py  _MoveGoal.py  _MoveResult.py  _StopAction.py  _StopActionFeedback.py  _StopActionGoal.py  _StopActionResult.py  _StopFeedback.py  _StopGoal.py  _StopResult.py  __init__.py
python/LfD/franka_msgs/msg/: _ErrorRecoveryActionFeedback.py  _ErrorRecoveryActionGoal.py  _ErrorRecoveryFeedback.py  _ErrorRecoveryGoal.py  _ErrorRecoveryResult.py  _Errors.py  __init__.py
python/LfD/franka_msgs/srv/: _SetCartesianImpedance.py  _SetForceTorqueCollisionBehavior.py  _SetFullCollisionBehavior.py  _SetJointImpedance.py
python/Teleop_Keyboard/: README.md  main_teleop.py  panda.py  teleop_keyboard.py
src/: cartesian_variable_impedance_controller.cpp  cartesian_variable_impedance_external_model_controller.cpp  franka_gripper_online.cpp  joint_variable_impedance_controller.cpp  model_read.cpp  read_ros.cpp
urdf/: panda.urdf  panda_calibrated.urdf  panda_calibrated_grounded.urdf  panda_wrong.urdf
